Fixing overflow of new categorie titles

--- a/webapp/static/css/templates/expert.css
+++ b/webapp/static/css/templates/expert.css
@@ -30,6 +30,8 @@
   opacity: .5;
   float: left;
   line-height: 50px;
+  height: 50px;
+  overflow: hidden;
   width: 300px;
   margin-left: 15px;
 }
